--- a/package.json
+++ b/package.json
@@ -5,8 +5,8 @@
   "main": "index.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start-dev": "nodemon index.js",
-    "start-prod": "node index.js"
+    "start-dev": "nodemon src/index.js",
+    "start-prod": "node src/index.js"
   },
   "author": "Hafiz Caniago",
   "license": "ISC",
